# IDL-11

./: .gitignore  README.md  pyproject.toml  requirements.txt
A0/: Priyanjali_Task_2_idl.ipynb  Priyanjali_task_2_idl.ipynb  contribution.txt  task_1_jo.ipynb  task_2_jo.ipynb  thanos.ipynb  thanos_1.ipynb  thanos_2_perceptron.ipynb  thanos_3.ipynb  thanos_perceptron.ipynb
A1/: .gitignore  Jo_MLP_FMNIST.py  Priyanjali_task1_automated.py  Priyanjali_task2_classify.ipynb  Priyanjali_task2_classify.py  classify_2_a.ipynb  combined-model.ipynb  fmnist_mlp_best_params.pickle  jo_polar_multihead.py  jo_regression_cnn.py  sample_with_image.xlsx  submission_custom_loss_classify2_a.py  submission_multi_head_code.py  submission_task1_cnn.py  task2_classify.py  thanos_MLP_FMNIST.py  thanos_clock_cla.py  thanos_clock_cla_144.ipynb  thanos_clock_cla_144.py  thanos_clock_cla_48.ipynb  thanos_clock_cla_48.py  thanos_clock_cla_720.py  thanos_combine_classes.py  thanos_models.py  thanos_multihead.py  thanos_multihead_combine.py
A2/: .gitignore  1_CAE.py  1_VAE.ipynb  1_VAE.py  A2_RNNs_text_to_image.ipynb  A2_RNNs_text_to_image_2.ipynb  A2_rnn_ver1 copy.py  A2_rnn_ver1.ipynb  A2_rnn_ver2.py  Interactive-a2_rnn_I2T.ipynb  Interactive-a2_rnn_T2I.ipynb  Interactive-a2_rnn_T2T.ipynb  Interactive_A2_rnn_ver2_I2T.ipynb  Interactive_A2_rnn_ver2_T2T.ipynb  a2_AE.py  a2_GAN.py  a2_generativemodels.py  a2_generativemodels_2.py  a2_rnn_I2T.py  a2_rnn_T2I.ipynb  a2_rnn_T2I.py  a2_rnn_T2T.py  a2_rnn_T2T_final.ipynb  api_fconv.py  download_dogs.sh  fcnn.py  final_image2text.py  final_image2text_.ipynb  (+2 more)
(+16 files in other folders)
