[project]
name = "IDL"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.7"
dependencies = [
    "jupyter>=1.1.1",
    "keras-tuner>=1.4.7",
    "matplotlib>=3.9.2",
    "numpy<2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "tensorflow[and-cuda]>=2.14.0",
    "umap-learn>=0.5.6",
    "keras_tuner",
    "openpyxl>=3.1.5",
    "opencv-python>=4.10.0.84",
    "tensorrt>=10.6.0",
]
